--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "backendupd",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=21.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && tsc",
@@ -17,32 +20,32 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "compression": "^1.7.4",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.4.0",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.3",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1",
     "pre-commit": "^1.2.2",
     "rimraf": "^6.0.1",
-    "stripe": "^16.8.0"
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^22.4.1",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^22.17.1",
     "concurrently": "^8.2.2",
-    "globals": "^15.9.0",
-    "nodemon": "^3.1.4",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "globals": "^15.15.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   },
   "pre-commit": [
     "ts.check",
